# crslice

./: CMakeLists.txt  Slice3rBase.cmake  conandata.yml  crslice.h.prebuild  graph.txt
impl/cura5.0/: CMakeLists.txt  cura.cmake
impl/cura5.0/BeadingStrategy/: BeadingStrategy.cpp  BeadingStrategyFactory.cpp  WideningBeadingStrategy.cpp
impl/cura5.0/communication/: Application.cpp  Application.h  FffGcodeWriter.cpp  FffGcodeWriter.h  FffPolygonGenerator.cpp  FffPolygonGenerator.h  Scene.h  gcodeExport.cpp  gcodeExport.h  layerPart.cpp  sliceDataStorage.cpp  sliceDataStorage.h  slicecontext.h
impl/cura5.0/include/: Application.h  BoostInterface.hpp  ConicalOverhang.h  ExtruderTrain.h  FanSpeedLayerTime.h  FffGcodeWriter.h  FffPolygonGenerator.h  FffProcessor.h  GCodePathConfig.h  InsetOrderOptimizer.h  LayerPlan.h  LayerPlanBuffer.h  MeshGroup.h  Mold.h  PathOrder.h  PathOrderMonotonic.h  PathOrderOptimizer.h  PathOrderPath.h  Preheat.h  PrimeTower.h  PrintFeature.h  RetractionConfig.h  Scene.h  SkeletalTrapezoidation.h  SkeletalTrapezoidationEdge.h  SkeletalTrapezoidationGraph.h  SkeletalTrapezoidationJoint.h  SkirtBrim.h  Slice.h  SpaceFillType.h  SupportInfillPart.h  ThomasTreeModelVolumes.h  ThomasTreeSupport.h  TopSurface.h  TreeModelVolumes.h  TreeModelVolumesT.h  TreeSupport.h  TreeSupportElement.h  TreeSupportElementT.h  TreeSupportEnums.h  (+27 more)
impl/cura5.0/include/BeadingStrategy/: BeadingStrategy.h  BeadingStrategyFactory.h  DistributedBeadingStrategy.h  LimitedBeadingStrategy.h  RedistributeBeadingStrategy.h  WideningBeadingStrategy.h
impl/cura5.0/include/communication/: ArcusCommunication.h  ArcusCommunicationPrivate.h  CommandLine.h  Communication.h  Listener.h  SliceDataStruct.h  slicecontext.h
impl/cura5.0/include/infill/: DensityProvider.h  GyroidInfill.h  ImageBasedDensityProvider.h  LightningDistanceField.h  LightningGenerator.h  LightningLayer.h  LightningTreeNode.h  NoZigZagConnectorProcessor.h  SierpinskiFill.h  SierpinskiFillProvider.h  (+3 more)
impl/cura5.0/infill/: infill.cpp  infill.h
impl/cura5.0/magic/: PrimeTower.cpp  PrimeTower.h  SkirtBrim.cpp  skin.cpp
impl/cura5.0/pathPlanning/: GCodePath.cpp  InsetOrderOptimizer.cpp  LayerPlan.cpp  LayerPlan.h  LayerPlanBuffer.cpp  PathOrderOptimizer.h  layerPart.cpp
impl/cura5.0/poly/: getlayerdata.cpp  getlayerdata.h
impl/cura5.0/settings/: Settings.cpp  parse.cpp  wrapper.cpp  wrapper.h
impl/cura5.0/skeletal/: SkeletalTrapezoidation.cpp  SkeletalTrapezoidation.h  SkeletalTrapezoidationGraph.cpp  SkeletalTrapezoidationJoint.h  VariableLineUtils.cpp  WallToolPaths.cpp  WallToolPaths.h  WallsComputation.cpp
impl/cura5.0/slice/: slicer.cpp  slicer.h  slicestep.cpp  slicestep.h
impl/cura5.0/src/: Application.cpp  ConicalOverhang.cpp  ExtruderTrain.cpp  FffGcodeWriter.cpp  FffPolygonGenerator.cpp  FffProcessor.cpp  GCodePathConfig.cpp  InsetOrderOptimizer.cpp  LayerPlan.cpp  LayerPlanBuffer.cpp  MeshGroup.cpp  Mold.cpp  PathOrderPath.cpp  Preheat.cpp  PrimeTower.cpp  Scene.cpp  SkeletalTrapezoidation.cpp  SkeletalTrapezoidationGraph.cpp  SkirtBrim.cpp  Slice.cpp  SupportInfillPart.cpp  ThomasTreeModelVolumes.cpp  ThomasTreeSupport.cpp  TopSurface.cpp  TreeModelVolumes.cpp  TreeModelVolumesT.cpp  TreeSupport.cpp  TreeSupportT.cpp  TreeSupportTipGenerator.cpp  WallToolPaths.cpp  WallsComputation.cpp  Weaver.cpp  Wireframe2gcode.cpp  bridge.cpp  gcodeExport.cpp  generateVaryingXYDisallowedArea.cpp  infill.cpp  layerPart.cpp  main.cpp  mesh.cpp  (+9 more)
impl/cura5.0/support/: TreeModelVolumesT.cpp  TreeSupportSettingsT.h  support.cpp  support.h
impl/cura5.0/tools/: Cache.cpp  Cache.h  inputserial.cpp  serial.cpp
impl/cura5.0/types/: EnumSettings.h
impl/cura5.0/utils/: ExtrusionJunction.cpp  ExtrusionJunction.h  LinearAlg2D.cpp  PolygonsSegmentIndex.cpp  PolygonsSegmentIndex.h  VoronoiUtils.cpp  VoronoiUtils.h  VoronoiUtilsCgal.cpp  g2g3.cpp  generateVaryingXYDisallowedArea.cpp  linearAlg2D.h  narrow_infill.cpp  narrow_infill.h  paintdata.cpp  paintdata.h  paintzseam.cpp  paintzseam.h  polygon.cpp  polygon.h  smoothspeedacc.h
libslic3r/: AABBTreeLines.hpp  AppConfig.cpp  Arrange.cpp  BlacklistedLibraryCheck.cpp  Brim.cpp  BuildVolume.cpp  CMakeLists.txt  ClipperUtils.cpp  Config.cpp  Config.hpp  CutUtils.cpp  Emboss.cpp  EmbossShape.hpp  GCode.cpp  GCode.hpp  GCodeReader.cpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.cpp  Layer.cpp  LayerRegion.cpp  Model.cpp  MultiMaterialSegmentation.cpp  PNGReadWrite.cpp  PlaceholderParser.cpp  Platform.cpp  Point.hpp  Preset.cpp  PresetBundle.cpp  Print.cpp  PrintApply.cpp  PrintBase.cpp  PrintBase.hpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp  PrintObjectSlice.cpp  SLAPrint.cpp  SLAPrintSteps.cpp  SlicesToTriangleMesh.cpp  (+17 more)
libslic3r/Arachne/: SkeletalTrapezoidation.cpp  SkeletalTrapezoidationGraph.cpp  WallToolPaths.cpp
libslic3r/Arachne/BeadingStrategy/: BeadingStrategyFactory.cpp  LimitedBeadingStrategy.cpp
libslic3r/Arachne/utils/: ExtrusionLine.hpp  VoronoiUtils.cpp
libslic3r/Arrange/Items/: ArrangeItem.cpp
libslic3r/Arrange/Tasks/: ArrangeTaskImpl.hpp  FillBedTaskImpl.hpp  MultiplySelectionTaskImpl.hpp
libslic3r/Fill/: Fill.cpp  FillBase.cpp  FillEnsuring.cpp  FillRectilinear.cpp
libslic3r/Format/: 3mf.cpp  AMF.cpp  AnycubicSLA.cpp  OBJ.cpp  SL1.cpp  STEP.cpp  bbs_3mf.cpp  objparser.cpp  svg.cpp
libslic3r/GCode/: CoolingBuffer.cpp  ExtrusionProcessor.hpp  FanMover.cpp  GCodeProcessor.cpp  GCodeProcessor.hpp  PostProcessor.cpp  PressureEqualizer.cpp  SeamPlacer.cpp  Thumbnails.cpp  Thumbnails.hpp  ToolOrdering.cpp  smoothspeedandacc.cpp  smoothspeedandacc.h
libslic3r/Geometry/: ArcWelder.cpp  Circle.cpp  VoronoiUtilsCgal.cpp
libslic3r/SLA/: BranchingTreeSLA.hpp  ConcaveHull.cpp  Hollowing.cpp  Pad.cpp  RasterBase.cpp  Rotfinder.cpp  SupportPointGenerator.cpp  SupportTree.cpp  SupportTreeBuildsteps.cpp  SupportTreeUtils.hpp
libslic3r/Shape/: TextShape.cpp
libslic3r/Support/: SupportCommon.cpp  SupportMaterial.cpp  TreeModelVolumes.cpp  TreeSupport.cpp
libslic3r/admesh/: connect.cpp  shared.cpp  stl_io.cpp  stlinit.cpp  util.cpp
(+575 files in other folders)
